--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Interactive analytics and data visualisation in R</title>
+    <title>Data visualisation, interactive data analysis, statistical programming</title>
     <link rel="stylesheet" href="libraries/frameworks/minimal/stylesheets/styles.css">
     <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/solarized_light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
 <header>
-  <h1>Interactive analytics and data visualisation in R</h1>
+  <h1>Data visualisation, interactive data analysis, statistical programming</h1>
 <!--  <p></p>
 
    <img width='150px' src='assets/img/'></img>
@@ -57,24 +57,22 @@
 </header>
 
       <section>
-        <h2>Background</h2>
+        <h3>Introduction</h3>
 <p>In recent years, the power of R has been unleashed through the Shiny package which enables users to interact with complex analyses without needing to know any R programming.  A Shiny application is a web interface to an underlying R instance.  It is remarkably easy to develop both simple and complex Shiny apps using R and importantly, it requires no special knowledge of HTML, CSS or JavaScript.  This workshop outlines the basics of developing a Shiny app and showcases some more advanced examples.  One of the advantages of moving to a web-based approach is that it enables richer interactivity in data visualisation.  There is a large, and ever increasing, pool of <strong>R</strong> packages that allow researchers to go beyond static plots.  </p>
-
-<h2>Objectives</h2>
 
 <p>As part of this workshop we will introduce the htmlwidgets framework that joins the raw statistical power of R with beautiful visualisations powered by JavaScript.  The <code>networkD3</code> and <code>edgebundleR</code> packages will be highlighted as examples that enable interactive visualisations of networks.  It can be a full time job keeping up with all the new features R has to offer statisticians and bioinformaticians – the aim of this workshop is to familiarise you with some of the latest and greatest tools available for data visualisation and interactive data analysis.</p>
 
-<h2>Relevance</h2>
+<h3>Relevance</h3>
 
 <p>This workshop is relevant to all practising bioinformaticians who use R as part of their research and development pipeline. It will be particularly useful for people who are interested in better communicating their research through interactive graphics or enabling their analyses to be replicated within a user-friendly web interface.</p>
 
-<h2>Assumed knowledge</h2>
+<h4>Assumed knowledge</h4>
 
 <p>A working understanding of R will be assumed.</p>
 
-<h2>Preparation</h2>
+<h3>Preparation</h3>
 
-<h3>Computing requirements</h3>
+<h4>Computing requirements</h4>
 
 <ul>
 <li>Latest version of <a href="http://cran.r-project.org/">R</a> (v3.2.2 or later)</li>
@@ -89,7 +87,7 @@ install.packages(&quot;d3heatmap&quot;)
 install.packages(&quot;edgebundleR&quot;)
 </code></pre>
 
-<h2>Resources</h2>
+<h3>Resources</h3>
 
 <ol>
 <li><p><a href="lectures/01/index.html">Lecture 01</a></p></li>
@@ -98,28 +96,28 @@ install.packages(&quot;edgebundleR&quot;)
 <li><p><a href="labs/01/solutions.html">Lab 01</a></p></li>
 </ol>
 
-<h2>Recommended further reading</h2>
+<h3>Recommended further reading</h3>
 
-<h3>Articles</h3>
+<h4>Articles</h4>
 
 <ul>
 <li></li>
 <li>Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. arXiv:1509.07583 [stat.ME]</li>
 </ul>
 
-<h3>Books</h3>
+<h4>Books</h4>
 
 <ul>
 <li></li>
 </ul>
 
-<h3>Packages</h3>
+<h4>Packages</h4>
 
 <ul>
 <li></li>
 </ul>
 
-<h2>Feedback</h2>
+<h3>Feedback</h3>
 
 <p>At the end of the course, please provide your feedback <a href="https://docs.google.com/forms/UPDATE">here</a>.</p>
 
