--- a/lectures/01/index.html
+++ b/lectures/01/index.html
@@ -46,28 +46,7 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <article data-timings="">
-    <p><br></p>
-
-<blockquote>
-<h2>"Doubt is not a pleasant mental state, <br> but certainty is a ridiculous one."</h2>
-
-<p style="text-align: right"><b>Voltaire (1694-1778)</b></p>
-</blockquote>
-
-<p><br></p>
-
-<div class="columns-2">
-
-<p>
-<ul>
-<li> <span style="color:red; font-weight:normal">Necessity</span> to select models is great despite philosophical issues </li>
-<li> Myriad of  model/variable selection methods based on <span style="color:blue; font-weight:normal">loglikelihood</span>, <span style="color:red; font-weight:normal">RSS</span>, prediction errors, <span style="color:orange; font-weight:normal">resampling</span>, etc </li>
-</ul>
-</p>
-
-<br>
-
-</div>
+    <p>Content to appear here soon</p>
 
   </article>
   <!-- Presenter Notes -->
