--- a/index.html
+++ b/index.html
@@ -85,37 +85,25 @@ install.packages(&quot;mplot&quot;)
 install.packages(&quot;pairsD3&quot;)
 install.packages(&quot;d3heatmap&quot;)
 install.packages(&quot;edgebundleR&quot;)
+install.packages(&quot;readr&quot;)
 </code></pre>
 
 <h3>Resources</h3>
 
 <ol>
-<li><p><a href="lectures/01/index.html">Lecture 01</a></p></li>
-<li><p><a href="labs/01/index.html">Lab 01</a></p></li>
-<li><p><a href="labs/Markdown%20Tips/index.html">Lab Markdown Tips</a></p></li>
-<li><p><a href="labs/01/solutions.html">Lab 01</a></p></li>
+<li><a href="lectures/01/index.html">Lecture</a></li>
+<li><a href="labs/01/index.html">Lab</a></li>
+<li><a href="labs/Markdown%20Tips/index.html">Markdown tips</a></li>
+<li><a href="labs/01/solutions.html">Suggested lab solutions</a></li>
 </ol>
 
 <h3>Recommended further reading</h3>
 
-<h4>Articles</h4>
-
-<ul>
-<li></li>
-<li>Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. arXiv:1509.07583 [stat.ME]</li>
-</ul>
-
-<h4>Books</h4>
-
 <ul>
 <li></li>
 </ul>
 
-<h4>Packages</h4>
-
-<ul>
-<li></li>
-</ul>
+<h2>- Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. arXiv:1509.07583 [stat.ME]</h2>
 
 <h3>Feedback</h3>
 
