--- a/index.html
+++ b/index.html
@@ -97,13 +97,11 @@ install.packages(&quot;readr&quot;)
 <li><a href="labs/01/solutions.html">Suggested lab solutions</a></li>
 </ol>
 
-<h3>Recommended further reading</h3>
+<h4>Recommended further reading</h4>
 
 <ul>
-<li></li>
+<li>Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. <a href="http://arxiv.org/abs/1509.07583">arXiv:1509.07583 [stat.ME]</a></li>
 </ul>
-
-<h2>- Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. arXiv:1509.07583 [stat.ME]</h2>
 
 <h3>Feedback</h3>
 
