--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ install.packages(&quot;readr&quot;)
 
 <h3>Feedback</h3>
 
-<p>At the end of the course, please provide your feedback <a href="https://docs.google.com/forms/UPDATE">here</a>.</p>
+<p>At the end of the course, please provide your feedback <a href="https://docs.google.com/forms/d/14PPaCJDNbJzF4dKc7ONVDgnBGanFA2eM1XRCFRWgNaE/viewform">here</a>.</p>
 
       </section>
       <footer>
