--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -57,7 +57,7 @@
       <section>
         <h2>Characterizing mutation-expression networks in multiple cancers</h2>
 <ul>
-<li><a href="https://twitter.com/shazanfar">Shila Ghazanfar&#39;s</a>  <a href="https://github.com/garthtarr/visR/labs/02/BIS2015FF_Ghazanfar.pdf">BIS2015 poster</a> has an accompanying Shiny app.</li>
+<li><a href="https://twitter.com/shazanfar">Shila Ghazanfar&#39;s</a>  <a href="https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf">BIS2015 poster</a> has an accompanying Shiny app.</li>
 <li>4,443 tumours analysed over 19 cancers from TCGA</li>
 <li>R Shiny app to explore results among different parameters is available to download at <a href="http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip">www.maths.usyd.edu.au/u/sheilag/pacmen.zip</a></li>
 </ul>
@@ -65,7 +65,7 @@
 <h3>Instructions</h3>
 
 <ul>
-<li>Check out Shila&#39;s poster <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></li>
+<li>Check out Shila&#39;s fast forward poster session slide <a href="https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf"><i class="fa fa-link"></i></a></li>
 <li>Download and unzip from <a href="http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip">www.maths.usyd.edu.au/u/sheilag/pacmen.zip</a></li>
 <li>Install a few R packages including customised version of D3network using:</li>
 </ul>
