--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
 <li>Install the following packages (or ensure you have the latest versions):</li>
 </ul>
 
-<pre><code class="r">install.packages(&quot;networkD3&quot;)
-install.packages(&quot;mplot&quot;)
-install.packages(&quot;pairsD3&quot;)
-install.packages(&quot;d3heatmap&quot;)
-install.packages(&quot;edgebundleR&quot;)
-install.packages(&quot;readr&quot;)
+<pre><code class="r">install.packages(c(&quot;shiny&quot;, &quot;shinydashboard&quot;, &quot;shinythemes&quot;, &quot;shinyBS&quot;,
+               &quot;ggplot2&quot;, &quot;magrittr&quot;, &quot;DT&quot;, &quot;ggvis&quot;, &quot;dplyr&quot;,
+               &quot;MASS&quot;, &quot;rhandsontable&quot;, &quot;pairsD3&quot;, &quot;tidyr&quot;, &quot;ICSNP&quot;,
+               &quot;networkD3&quot;, &quot;d3heatmap&quot;, &quot;edgebundleR&quot;, &quot;readr&quot;, &quot;mplot&quot;))
 </code></pre>
 
 <h3>Resources</h3>
 
 <ol>
-<li><a href="lectures/01/index.html">Lecture</a></li>
-<li><a href="labs/01/index.html">Lab</a></li>
+<li><a href="lectures/01/index.html">Slides</a></li>
+<li><a href="labs/03/index.html">Interactive graphics lab</a></li>
+<li><a href="labs/02/index.html">Play with shiny lab</a></li>
+<li><a href="labs/01/index.html">Harder shiny + interactive graphics lab</a></li>
+<li><a href="labs/01/solutions.html">Suggested more advanced lab solutions</a></li>
 <li><a href="labs/Markdown%20Tips/index.html">Markdown tips</a></li>
-<li><a href="labs/01/solutions.html">Suggested lab solutions</a></li>
 </ol>
 
 <h4>Recommended further reading</h4>
@@ -105,7 +105,7 @@ install.packages(&quot;readr&quot;)
 
 <h3>Feedback</h3>
 
-<p>At the end of the course, please provide your feedback <a href="https://docs.google.com/forms/d/14PPaCJDNbJzF4dKc7ONVDgnBGanFA2eM1XRCFRWgNaE/viewform">here</a>.</p>
+<p>At the end of the workshop, please provide your feedback <a href="https://docs.google.com/forms/d/14PPaCJDNbJzF4dKc7ONVDgnBGanFA2eM1XRCFRWgNaE/viewform">here</a>.</p>
 
       </section>
       <footer>
