--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -83,11 +83,10 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;)
 <pre><code class="r">shiny::runApp(&quot;~/Downloads/pacmen&quot;)
 </code></pre>
 
-<p>Alternatively you can run the app by opening either the <code>server.R</code> or the <code>ui.R</code> files in RStudio and then clicking the <code>Run App</code> button in the top right of the code editor window.</p>
-
 <ul>
-<li>Explore the app to get a feel for the sorts of things you can do with shiny.</li>
-<li>Check out Shila&#39;s twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></li>
+<li><p>Alternatively you can run the app by opening either the <code>server.R</code> or the <code>ui.R</code> files in RStudio and then clicking the <code>Run App</code> button in the top right of the code editor window.</p></li>
+<li><p>Explore the app to get a feel for the sorts of things you can do with shiny.</p></li>
+<li><p>Check out Shila&#39;s twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></p></li>
 </ul>
 
 <h2>Common issues</h2>
@@ -103,8 +102,7 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;)
 <h2>Reference</h2>
 
 <ul>
-<li>Robinson D (2015). &quot;Cleaning and visualizing genomic data: a case study in tidy analysis&quot;, blog post. <a href="http://varianceexplained.org/r/tidy-genomics/">http://varianceexplained.org/r/tidy-genomics/</a></li>
-<li>Brauer et al. (2008). Coordination of Growth Rate, Cell Cycle, Stress Response, and Metabolic Activity in Yeast,</li>
+<li></li>
 </ul>
 
       </section>
