--- a/labs/02/index.html
+++ b/labs/02/index.html
@@ -57,7 +57,7 @@
       <section>
         <h2>Characterizing mutation-expression networks in multiple cancers</h2>
 <ul>
-<li><a href="https://twitter.com/shazanfar">Shila Ghazanfar&#39;s</a>  <a href="https://github.com/garthtarr/visR/blob/gh-pages/labs/02/BIS2015FF_Ghazanfar.pdf">BIS2015 poster</a> has an accompanying Shiny app.</li>
+<li><a href="https://twitter.com/shazanfar">Shila Ghazanfar&#39;s</a>  <a href="http://f1000research.com/posters/4-1046">BIS2015 poster</a> has an accompanying Shiny app.</li>
 <li>4,443 tumours analysed over 19 cancers from TCGA</li>
 <li>R Shiny app to explore results among different parameters is available to download at <a href="http://www.maths.usyd.edu.au/u/sheilag/pacmen.zip">www.maths.usyd.edu.au/u/sheilag/pacmen.zip</a></li>
 </ul>
@@ -84,12 +84,12 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;)
 </code></pre>
 
 <ul>
-<li><p>Alternatively you can run the app by opening either the <code>server.R</code> or the <code>ui.R</code> files in RStudio and then clicking the <code>Run App</code> button in the top right of the code editor window.</p></li>
-<li><p>Explore the app to get a feel for the sorts of things you can do with shiny.</p></li>
-<li><p>Check out Shila&#39;s twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></p></li>
+<li>Alternatively you can run the app by opening either the <code>server.R</code> or the <code>ui.R</code> files in RStudio and then clicking the <code>Run App</code> button in the top right of the code editor window.</li>
+<li>Explore the app to get a feel for the sorts of things you can do with shiny.</li>
+<li>Check out Shila&#39;s twitter account <a href="https://twitter.com/shazanfar"><i class="fa fa-twitter"></i></a></li>
 </ul>
 
-<h2>Common issues</h2>
+<h3>Common issues</h3>
 
 <ul>
 <li>It may take a little while for the app to load, be patient!  Serious computations are in progress.</li>
@@ -99,10 +99,11 @@ devtools::install_github(&quot;garthtarr/networkD3&quot;)
 <pre><code class="r">devtools::install_github(&quot;garthtarr/networkD3&quot;)
 </code></pre>
 
-<h2>Reference</h2>
+<h3>References</h3>
 
 <ul>
-<li></li>
+<li>Ghazanfar S and Yang JYH. Characterizing mutation-expression network relationships in multiple cancers. F1000Research 2015, 4:1046 (poster) (doi: <a href="http://dx.doi.org/10.7490/f1000research.1110789.1">10.7490/f1000research.1110789.1</a>)</li>
+<li>Ghazanfar S and Yang JYH. Characterizing mutation-expression network relationships in multiple cancers. <em>Computational Biology and Chemistry Special Issue for <a href="http://www.sfasa.org/apbc2016/apbc2016.html">APBC2016</a></em> (in press).</li>
 </ul>
 
       </section>
