--- a/index.html
+++ b/index.html
@@ -90,17 +90,27 @@
 
 <ol>
 <li><a href="lectures/01/index.html">Slides</a></li>
-<li><a href="labs/03/index.html">Interactive graphics lab</a></li>
-<li><a href="labs/02/index.html">Play with shiny lab</a></li>
-<li><a href="labs/01/index.html">Harder shiny + interactive graphics lab</a></li>
-<li><a href="labs/01/solutions.html">Suggested more advanced lab solutions</a></li>
+<li><a href="lectures/01/DemoCode.R">Lecture Code</a></li>
+<li><a href="labs/03/index.html">Lab 1: Interactive graphics</a></li>
+<li><a href="labs/02/index.html">Lab 2: Play with shiny</a></li>
+<li><a href="labs/01/index.html">Lab 3: Build a shiny app (harder)</a></li>
 <li><a href="labs/Markdown%20Tips/index.html">Markdown tips</a></li>
 </ol>
 
 <h4>Recommended further reading</h4>
 
+<p><strong>Journal articles</strong></p>
+
 <ul>
+<li>McMurdie and Holmes (2014) Shiny-phyloseq: Web Application for Interactive Microbiome Analysis with Provenance Tracking. Bioinformatics (Oxford, England) 31(2), 282–283. doi: <a href="10.1093/bioinformatics/btu616">10.1093/bioinformatics/btu616</a></li>
+<li>McMurdie and Holmes (2013) phyloseq: An R package for reproducible interactive analysis and graphics of microbiome census data. PLoS ONE 8(4):e61217. doi: <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0061217">10.1371/journal.pone.0061217</a></li>
 <li>Tarr G, Müller S, and Welsh AH (2015). mplot: An R package for graphical model stability and variable selection. <a href="http://arxiv.org/abs/1509.07583">arXiv:1509.07583 [stat.ME]</a></li>
+</ul>
+
+<p><strong>Blog posts</strong></p>
+
+<ul>
+<li></li>
 </ul>
 
 <h3>Feedback</h3>
